--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/log"
         android:label="@string/app_name"
        android:theme="@android:style/Theme.NoTitleBar" >
         <activity android:name=".MainActivity"  
